--- a/iGMS/Views/Home/Index.cshtml
+++ b/iGMS/Views/Home/Index.cshtml
@@ -203,10 +203,9 @@
         </div>
     </div>
 </div>
-<ul class="sticky-toolbar nav flex-column pl-2 pr-2 pt-3 pb-3 mt-4">
+<ul class="sticky-toolbar nav flex-column pl-2 pr-2 pt-3 pb-3 mt-4" id="menu_contextmenu">
     <li class="nav-item mb-2" id="kt_demo_panel_toggle" data-toggle="tooltip" title="" data-placement="right" data-original-title="Check out more demos">
         <a class="btn btn-sm btn-icon btn-bg-light btn-icon-success btn-hover-success" href="#">
-
             <span class="svg-icon svg-icon-xl svg-icon-primary tooltip1">
                 <span class="svg-icon svg-icon-primary svg-icon-2x">
                     <i class="flaticon2-gear"></i>
@@ -215,7 +214,6 @@
             </span>
         </a>
     </li>
-
     <li class="nav-item mb-2" data-toggle="tooltip" title="" data-placement="left" data-original-title="Documentation">
         <a class="btn btn-sm btn-icon btn-bg-light btn-icon-warning btn-hover-warning" id="hoadontreo">
             <span class="svg-icon svg-icon-xl svg-icon-primary tooltip1">
