--- a/iGMS/Content/Style.css
+++ b/iGMS/Content/Style.css
@@ -12,3 +12,57 @@
     height: 15%;
     text-align: center;
 }
+#menu_contextmenu {
+    display: none
+}
+
+.dis:disabled {
+    background-color: dimgrey;
+    color: linen;
+    opacity: 1;
+}
+.tooltip1 .tooltiptext {
+    visibility: hidden;
+    position: absolute;
+    width: 200px;
+    background-color: #ffffff;
+     color: #000000; 
+     text-align: center; 
+     padding: 5px 0; 
+     border-radius: 50%; 
+     z-index: 1; 
+     opacity: 0; 
+     transition: opacity .6s; 
+     border:1px solid #000000
+}
+
+.tooltip-top {
+    bottom: 125%;
+    left: 50%;
+    margin-left: -100px;
+}
+.tooltip-top::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.tooltip1:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+.tooltip1 {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted #ccc;
+    color: #006080;
+}
+.longs_input input{
+    width:7%
+}
