--- a/iGMS/Views/DetailWareHouse/Index2.cshtml
+++ b/iGMS/Views/DetailWareHouse/Index2.cshtml
@@ -31,7 +31,7 @@
             <label for="example-password-input" class="col-2 col-form-label">Số Đơn Hàng <span style="color:red"> (*) </span></label>
             <div class="col-10">
                 <div class="input-group ">
-                    <input class="form-control selectpicker" id="idsaleorder" onkeyup="Show()" name="" />
+                    <input class="form-control selectpicker" id="idsaleorder" name="" />
                 </div>
             </div>
         </div>
