--- a/iGMS/Views/Color/Edits.cshtml
+++ b/iGMS/Views/Color/Edits.cshtml
@@ -29,6 +29,34 @@
                 </div>
             </div>
         </div>
+        <div class="form-group row">
+            <label for="example-password-input" class="col-2 col-form-label">Màu</label>
+            <div class="col-10">
+                <div class="input-group ">
+                    <input class="form-control" type="color" id="color" value="@Model.Color1" />
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="example-password-input" class="col-2 col-form-label">Mô Tả</label>
+            <div class="col-10">
+                <div class="input-group ">
+                    <textarea class="form-control" type="text" placeholder="Mô Tả" id="des" >@Model.Description</textarea>
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="example-password-input" class="col-1 col-form-label">Trạng Thái</label>
+            <label type="button" class="col-1" data-toggle="tooltip" title="Trạng Thái Thể Hiện Tình Trạng Hoạt Động Của Màu Sắc">
+                <i class="flaticon-warning text-primary"></i>
+            </label>
+            <div class="col-10">
+                <label class="checkbox checkbox-success">
+                    <input type="checkbox" name="Checkboxes5" id="status" checked="@Model.Status">
+                    <span></span>Trạng Thái
+                </label>
+            </div>
+        </div>
     </div>
     <div class="card-footer">
         <div class="row">
@@ -42,12 +70,6 @@
     </div>
 </div>
 @section scripts{
-    <script src="assets/js/pages/crud/forms/widgets/tagify.js"></script>
-    <script>
-        var input = document.getElementById('name');
-        new Tagify(input)
-
-    </script>
     <script src="~/Scripts/Color.js"></script>
 }
 
