--- a/iGMS/Views/Size/Adds.cshtml
+++ b/iGMS/Views/Size/Adds.cshtml
@@ -36,6 +36,26 @@
                 </div>
             </div>
         </div>
+        <div class="form-group row">
+            <label for="example-password-input" class="col-2 col-form-label">Mô Tả</label>
+            <div class="col-10">
+                <div class="input-group ">
+                    <textarea class="form-control" type="text" placeholder="Mô Tả" id="des"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="example-password-input" class="col-1 col-form-label">Trạng Thái</label>
+            <label type="button" class="col-1" data-toggle="tooltip" title="Trạng Thái Thể Hiện Tình Trạng Hoạt Động Của Kích Thước">
+                <i class="flaticon-warning text-primary"></i>
+            </label>
+            <div class="col-10">
+                <label class="checkbox checkbox-success">
+                    <input type="checkbox" name="Checkboxes5" id="status" checked="checked">
+                    <span></span>Trạng Thái
+                </label>
+            </div>
+        </div>
     </div>
     <div class="card-footer">
         <div class="row">
