--- a/iGMS/Views/Unit/Adds.cshtml
+++ b/iGMS/Views/Unit/Adds.cshtml
@@ -14,10 +14,18 @@
     <div class="card-body">
         <div class="form-group mb-8">
             <div class="alert alert-custom alert-default" role="alert">
+                <div class="alert-text">Vui Lòng Nhập Đúng Tất Cả Dữ Liệu Để Đảm Bảo Hệ Thống (1 Đơn Vị Mới Chỉ Cần Khai Báo 1 Lần Để Lưu Vào Hệ Thống)</div>
                 <div class="alert-icon"><i class="flaticon-warning text-primary"></i></div>
                 <div class="alert-text">
-                    Vui Lòng Nhập Đúng Tất Cả Dữ Liệu Để Đảm Bảo Hệ Thống
+                    Lướt Vào Để Xem Mô Tả
                 </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-2 col-form-label">Nhóm Đơn Vị Đo Lường<span style="color:red"> (*) </span></label>
+            <div class="col-10">
+                <select class="form-control" id="groupUnit">
+                </select>
             </div>
         </div>
         <div class="form-group row">
@@ -36,6 +44,26 @@
                 </div>
             </div>
         </div>
+        <div class="form-group row">
+            <label for="example-password-input" class="col-2 col-form-label">Mô Tả</label>
+            <div class="col-10">
+                <div class="input-group ">
+                    <textarea class="form-control" type="text" placeholder="Mô Tả" id="des"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="example-password-input" class="col-1 col-form-label">Trạng Thái</label>
+            <label type="button" class="col-1" data-toggle="tooltip" title="Trạng Thái Thể Hiện Tình Trạng Hoạt Động Của Đơn Vị">
+                <i class="flaticon-warning text-primary"></i>
+            </label>
+            <div class="col-10">
+                <label class="checkbox checkbox-success">
+                    <input type="checkbox" name="Checkboxes5" id="status" checked="checked">
+                    <span></span>Trạng Thái
+                </label>
+            </div>
+        </div>
     </div>
     <div class="card-footer">
         <div class="row">
@@ -49,7 +77,27 @@
     </div>
 </div>
 @section scripts{
-
+    <script>
+        groupUnit();
+        function groupUnit() {
+            $.ajax({
+                url: '/Unit/allUnit',
+                type: 'get',
+                success: function (data) {
+                    $('#groupUnit').empty();
+                    if (data.code == 200) {
+                        let table = '<option value="-1">Chọn Nhóm Đơn Vị</option>'
+                        $.each(data.groupUnit, function (k, v) {
+                            table += '<option value="' + v.id + '">' + v.name + '</option>'
+                        });
+                        $('#groupUnit').append(table);
+                    } else (
+                        alert(data.msg)
+                    )
+                }
+            })
+        }
+    </script>
     <script src="~/Scripts/Unit.js"></script>
 }
 
